--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "prebuild": "tslint -c tslint.json -p tsconfig.json",
     "build": "tsc",
-    "dev": "yarn build && node .",
-    "watch": "nodemon --watch . -e ts --exec yarn dev",
+    "dev": "npm run build && node .",
+    "watch": "nodemon --watch . -e ts --exec npm run dev",
     "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
