--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@rauschma/stringio": "^1.4.0",
     "@types/dotenv": "^6.1.0",
     "@types/knex": "^0.15.2",
+    "@ucdavis/frcs:": "^1.0.5",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "fs": "0.0.1-security",
