--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "@rauschma/stringio": "^1.4.0",
     "@types/dotenv": "^6.1.0",
     "@types/knex": "^0.15.2",
-    "@ucdavis/frcs:": "^1.0.5",
+    "@ucdavis/frcs": "^1.0.5",
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "fs": "0.0.1-security",
+    "geolib": "^3.1.0",
     "knex": "^0.16.3",
     "osrm": "^5.22.0",
     "pg": "^7.8.1",
