--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@rauschma/stringio": "^1.4.0",
     "@types/dotenv": "^6.1.0",
+    "@types/geolib": "^2.0.23",
     "@types/knex": "^0.15.2",
     "@ucdavis/frcs": "^1.0.5",
     "body-parser": "^1.18.3",
