--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "fs": "0.0.1-security",
     "geolib": "^3.3.1",
     "knex": "^0.16.3",
-    "osrm": "^5.22.0",
-    "pg": "^7.17.1",
+    "osrm": "5.22.0",
+    "pg": "^8.7.3",
     "ps": "^1.0.0",
     "shpjs": "^3.6.3",
     "srtm-elevation": "^2.0.0"
@@ -38,7 +38,7 @@
     "@types/knex": "^0.15.2",
     "@types/node": "^10.12.21",
     "@types/osrm": "^5.12.0",
-    "@types/pg": "^7.14.1",
+    "@types/pg": "^8.6.5",
     "@types/shpjs": "^3.4.0",
     "nodemon": "^1.18.9",
     "tslint": "^5.20.1",
