update to new osrm types

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/knex": "^0.15.2",
     "@types/node": "^20.12.13",
     "@types/pg": "^8.11.6",
+    "@types/project-osrm__osrm": "^5.27.3",
     "@types/shpjs": "^3.4.7",
     "nodemon": "^3.1.2",
     "typescript": "^5.4.5"
