--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "private": false,
   "scripts": {
     "build": "tsc",
-    "dev": "npm run build && node .",
+    "dev": "npm run build && node dist",
     "watch": "nodemon --watch . -e ts --exec npm run dev",
-    "start": "node ./index.js",
+    "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
