--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Temporarily added
+#Py files and data processing
 my_env
 upload_completed
 error_files
